--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Tue Jul 19 13:53:58 CEST 2011
+#Tue Jul 19 16:20:18 CEST 2011
 eclipse.preferences.version=1
 encoding//src/djangoplicity/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/admin.py=utf-8
@@ -19,6 +19,7 @@ encoding//src/djangoplicity/newsletters/exceptions.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0001_initial.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0003_auto__add_field_list_last_sync.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0004_auto__del_list__del_bademailaddress__del_mailchimplisttoken__del_mailc.py=utf-8
+encoding//src/djangoplicity/newsletters/migrations/0005_auto__add_newsletterdatasource__add_unique_newsletterdatasource_type_n.py=utf-8
 encoding//src/djangoplicity/newsletters/models.py=utf-8
 encoding//src/djangoplicity/newsletters/tasks/__init__.py=utf-8
 encoding//src/djangoplicity/newsletters/tests.py=utf-8
