--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Thu Aug 25 12:16:36 CEST 2011
+#Mon Aug 29 16:52:17 CEST 2011
 eclipse.preferences.version=1
 encoding//src/djangoplicity/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/admin.py=utf-8
@@ -18,6 +18,7 @@ encoding//src/djangoplicity/newsletters/admin.py=utf-8
 encoding//src/djangoplicity/newsletters/exceptions.py=utf-8
 encoding//src/djangoplicity/newsletters/forms.py=utf-8
 encoding//src/djangoplicity/newsletters/generator.py=utf-8
+encoding//src/djangoplicity/newsletters/mailers.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0001_initial.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0003_auto__add_field_list_last_sync.py=utf-8
 encoding//src/djangoplicity/newsletters/migrations/0004_auto__del_list__del_bademailaddress__del_mailchimplisttoken__del_mailc.py=utf-8
