--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,9 @@
-#Mon Aug 29 16:52:17 CEST 2011
+#Tue Aug 30 15:46:12 CEST 2011
 eclipse.preferences.version=1
 encoding//src/djangoplicity/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/admin.py=utf-8
 encoding//src/djangoplicity/mailinglists/exceptions.py=utf-8
+encoding//src/djangoplicity/mailinglists/mailers.py=utf-8
 encoding//src/djangoplicity/mailinglists/mailman.py=utf-8
 encoding//src/djangoplicity/mailinglists/migrations/0001_initial.py=utf-8
 encoding//src/djangoplicity/mailinglists/models.py=utf-8
