--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,10 +1,11 @@
-#Thu Sep 22 17:17:59 CEST 2011
+#Fri Sep 23 12:59:19 CEST 2011
 eclipse.preferences.version=1
 encoding//src/djangoplicity/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/admin.py=utf-8
 encoding//src/djangoplicity/mailinglists/exceptions.py=utf-8
 encoding//src/djangoplicity/mailinglists/mailman.py=utf-8
 encoding//src/djangoplicity/mailinglists/migrations/0001_initial.py=utf-8
+encoding//src/djangoplicity/mailinglists/migrations/0002_auto__add_field_list_base_url.py=utf-8
 encoding//src/djangoplicity/mailinglists/models.py=utf-8
 encoding//src/djangoplicity/mailinglists/tasks/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/tasks/actions.py=utf-8
