initial code for scheduling feature.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Oct 14 10:24:58 CEST 2011
+#Tue Nov 15 09:54:10 CET 2011
 eclipse.preferences.version=1
 encoding//src/djangoplicity/__init__.py=utf-8
 encoding//src/djangoplicity/mailinglists/__init__.py=utf-8
