--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -29,8 +29,6 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE
 #
-include distribute_setup.py *.txt
-recursive-include docs *
+include *.txt
 recursive-include src/djangoplicity/newsletters/templates *
 recursive-include src/djangoplicity/newsletters/static * 
-prune docs/build
