update Github CI to run tests on release branches

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Djangoplicity Newsletters CI
 
 on:
   push:
-    branches: [master, develop]
+    branches: [master, develop, release/*]
   pull_request:
-    branches: [master, develop]
+    branches: [master, develop, release/*]
 
 jobs:
   build:
