Upgrade/futurize stage1-2 (#5)
* add python future library

* add futurize stage1 upgrade command

* perform futurize stage1

* add futurize stage2 upgrade command

* perform futurize stage2

--- a/requirements/requirements-essential.txt
+++ b/requirements/requirements-essential.txt
@@ -15,3 +15,6 @@ git+https://@github.com/djangoplicity/djangoplicity-actions@develop
 
 # Djangoplicity
 git+https://@github.com/djangoplicity/djangoplicity.git@develop
+
+# Python 2/3 compatibility library
+future
