--- a/requirements/requirements-essential.txt
+++ b/requirements/requirements-essential.txt
@@ -1,20 +1,23 @@
-# Django==1.11.21
+Django==1.11.21
 setuptools
 certifi
-django-mailman == 0.4+eso1
+#django-mailman == 0.4+eso1
 mailchimp3 == 3.0.6
 
 # PostgreSQL python client
-psycopg2-binary==2.7.7
+psycopg2-binary==2.8.5
 
 # Asynchronous Task Queue
-celery==4.3.0
+celery==4.4.7
 
 # Djangoplicity actions
 git+https://@github.com/djangoplicity/djangoplicity-actions@develop
 
+# Django mailman
+git+https://@github.com/jelko/django-mailman@master
+
 # Djangoplicity
-git+https://@github.com/djangoplicity/djangoplicity.git@develop
+git+https://@github.com/djangoplicity/djangoplicity.git@release/python3
 
 # Python 2/3 compatibility library
 future
