Feature/test mailinglists (#7)
* add initial tests for mailinglists app

* change settings file on test env

* remove python future dependency

* Add initial tests for admin

* Add test for bad email addresses and other cases

* add test for mailchimp list's custom admin actions

* add test for subscribing and unsubscribing from mailchimp list

* add test for subscribing with bad merge fields params

* add str tests for other models

* refactor code style in tests

* remove djangoplicy-contacts dependency

* include environment variables in docker compose

* include secrets in github actions

* ignore env file

* comment file referencing contacts

* remove djangoplicy-contacts from installed apps

* update mailchimp api key references

* remove api key assertion

* add tests for Mailman List

* add list id to settings file

* add test for utils

* include list id as env var in github actions and docker compose

* remove unused file

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,8 +45,11 @@ jobs:
         run: python manage.py migrate
       - name: Run tests
         run: |
-          coverage run --source='.' manage.py test
+          env DJANGO_SETTINGS_MODULE="test_project.test_settings" coverage run --source='.' manage.py test
           coverage xml
+        env:
+          NEWSLETTERS_MAILCHIMP_API_KEY: ${{ secrets.NEWSLETTERS_MAILCHIMP_API_KEY }}
+          NEWSLETTERS_MAILCHIMP_LIST_ID: ${{ secrets.NEWSLETTERS_MAILCHIMP_LIST_ID }}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
