--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - "8002:8000"
     environment:
       BEAT: ${BEAT:-OFF}
+      NEWSLETTERS_MAILCHIMP_API_KEY: ${NEWSLETTERS_MAILCHIMP_API_KEY}
+      NEWSLETTERS_MAILCHIMP_LIST_ID: ${NEWSLETTERS_MAILCHIMP_LIST_ID}
     depends_on:
       - db
 
