--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
 
 [testenv]
 install_command = pip install --find-links https://www.djangoplicity.org/repository/packages/ {opts} {packages}
-commands = coverage run --source='.' manage.py test
+commands = env DJANGO_SETTINGS_MODULE="test_project.test_settings" coverage run --source='.' manage.py test
 setenv =
     PYTHONDONTWRITEBYTECODE=1
     PYTHONWARNINGS=always
