Upgrade/test Python versions against Django versions (#30)
* add Django 2 version and remove Python 3.7 from Github Actions

* update djangoplicity actions source branch from develop to release/python3

* change Django version from 2.2 to 1.11.21

--- a/requirements/requirements-essential.txt
+++ b/requirements/requirements-essential.txt
@@ -11,7 +11,7 @@ psycopg2-binary==2.8.5
 celery==4.4.7
 
 # Djangoplicity actions
-git+https://@github.com/djangoplicity/djangoplicity-actions@develop
+git+https://@github.com/djangoplicity/djangoplicity-actions@release/python3
 
 # Django mailman
 git+https://@github.com/jelko/django-mailman@master
