--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,8 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        python-version: [2.7, 3.7, 3.8]
+        python-version: [2.7, 3.8]
+        django-version: [1.11.21, 2.2.16]
 
     services:
       postgres:
@@ -40,6 +41,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt  --find-links https://www.djangoplicity.org/repository/packages/
+          pip install Django==${{ matrix.django-version }}
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
